# cassidy-v2

./: .gitignore  README.md  backend-v2.md  mobile_debug.txt  package-lock.json  package.json  tasks.md  test_insights.py
backend/: .env.example  Dockerfile  FRONTEND_AUTH_BUG_FIX.md  README.md  TEMPLATE_CUSTOMIZATION.md  alembic.ini  cassidy.db  pyproject.toml  requirements-lambda-slim.txt  test_agent_debug.py  test_agent_only.py  test_agent_simple.py  test_basic.py  test_database_check.py  test_db_connection.py  test_full_workflow.py  test_insights_simple.py  test_journal_tools.py  test_llm_structuring.py  test_new_template.py  test_pydantic_agent.py  test_pydantic_context_bug.py  test_pydantic_correct.py  test_real_context.py  test_simple_debug.py  test_simple_journal.py  test_tools_direct.py  view_db.py
backend/alembic/: env.py
backend/alembic/versions/: f65313b15209_initial_schema.py
backend/app/: database.py  main.py
backend/app/agents/: factory.py  insights_formatter.py  models.py  service.py  service_instrumented.py  task_tools.py  tools.py
backend/app/core/: config.py  database_url.py  deps.py  security.py
backend/app/models/: api.py  base.py  session.py  task.py  user.py
backend/app/repositories/: base.py  session.py  task.py  user.py
backend/app/services/: auth.py  insights_service.py  insights_service_v2.py
backend/app/templates/: __init__.py  loader.py  models.py  user_template.py
backend/scripts/: README.md  backup_db.py  create_demo_journal_entries.py  create_test_journal_entries.py  fix_journals_proper.py  import_cli.py  import_journal.py  import_journal_direct.py  import_journal_hybrid.py  import_journal_simple.py  import_journals_progress.py  import_journals_simple.py  import_single_journal.py  manage_demo_entries.py  manage_demo_entries_clean.py  manage_demo_entries_old.py  push_to_production.py  setup_user.py  test_task_creation.py
backend/tests/: test_agent_api.py  test_agent_flow.py  test_agent_integration.py  test_agent_service.py  test_agents_tools.py  test_authorization.py  test_journal_search.py  test_journal_search_no_entries.py  test_journal_search_simple.py  test_journal_search_structured.py  test_multi_turn.py  test_task_functionality.py
backend_old/: pyproject.toml  requirements.txt  test_agent_creation.py  test_anthropic.py  test_anthropic_v2.py  test_journal_flow.py
backend_old/app/: main.py
backend_old/app/agents/: __init__.py  main.py  models.py  tools.py
backend_old/app/core/: config.py
backend_old/app/models/: __init__.py  common.py  insight.py  session.py  user.py
backend_old/app/prompts/: base_agent_prompt.txt  conversation_system_prompt.txt  journaling_agent_instructions.txt  preference_extraction_prompt.txt  structuring_prompt_template.txt
backend_old/app/repositories/: __init__.py  (+1 more)
backend_old/scripts/: migrate_data.py  user.py
backend_old/tests/: conftest.py
(+97 files in other folders)
